fixes for story 2